# taxi-petzi

./: .editorconfig  .gitignore  README.md  pyproject.toml  release.sh  requirements_test.txt  setup.cfg  setup.py
taxi_petzi/: backend.py
tests/: test_backend.py
